Update gradle wrapper. Clean up code and documentation.